--- a/index.html
+++ b/index.html
@@ -15,23 +15,52 @@
       overflow-x: hidden;
     }
 
-    /* Efeito de brilho */
-    .glow-background {
+    /* Efeito de brilho mágico com partículas */
+    .sparkle {
       position: fixed;
-      top: 0; left: 0;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
+      overflow: hidden;
       pointer-events: none;
-      background-image: radial-gradient(white 1px, transparent 1px);
-      background-size: 50px 50px;
-      opacity: 0.2;
-      animation: sparkle 4s linear infinite;
+      z-index: 0;
     }
 
-    @keyframes sparkle {
-      0% { background-position: 0 0; }
-      100% { background-position: 50px 50px; }
+    .sparkle span {
+      position: absolute;
+      display: block;
+      width: 8px;
+      height: 8px;
+      background: rgba(255, 255, 255, 0.8);
+      border-radius: 50%;
+      animation: flutuarBrilho 10s linear infinite;
+      box-shadow: 0 0 8px white;
     }
+
+    @keyframes flutuarBrilho {
+      0% {
+        transform: translateY(100vh) scale(0.5);
+        opacity: 0;
+      }
+      10% {
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-10vh) scale(1.2);
+        opacity: 0;
+      }
+    }
+
+    .sparkle span:nth-child(1) { left: 10%; animation-delay: 0s; }
+    .sparkle span:nth-child(2) { left: 20%; animation-delay: 2s; }
+    .sparkle span:nth-child(3) { left: 35%; animation-delay: 4s; }
+    .sparkle span:nth-child(4) { left: 50%; animation-delay: 1s; }
+    .sparkle span:nth-child(5) { left: 65%; animation-delay: 3s; }
+    .sparkle span:nth-child(6) { left: 80%; animation-delay: 5s; }
+    .sparkle span:nth-child(7) { left: 90%; animation-delay: 6s; }
+
+    /* Restante do estilo continua igual... */
 
     header {
       text-align: center;
@@ -78,7 +107,6 @@
       box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
     }
 
-    /* Seção de personagens */
     #personagens {
       background-color: rgba(255, 255, 255, 0.3);
       padding: 50px 20px;
@@ -124,78 +152,14 @@
       color: white;
       margin-top: 30px;
     }
-
-    /* Lanternas mágicas */
-    .lanternas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      overflow: hidden;
-      z-index: 0;
-    }
-
-    .lanterna {
-      position: absolute;
-      width: 40px;
-      height: 60px;
-      background: radial-gradient(ellipse at center, #ffe0b2 0%, #ffcc80 100%);
-      border-radius: 10px 10px 5px 5px;
-      opacity: 0.8;
-      animation: flutuar 12s linear infinite, piscar 3s ease-in-out infinite alternate;
-    }
-
-    .lanterna::before {
-      content: "";
-      position: absolute;
-      bottom: -10px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 8px;
-      height: 8px;
-      background: gold;
-      border-radius: 50%;
-      box-shadow: 0 0 8px gold;
-    }
-
-    @keyframes flutuar {
-      0% {
-        transform: translateY(100vh) translateX(0) rotate(0deg);
-        opacity: 0;
-      }
-      10% {
-        opacity: 0.8;
-      }
-      100% {
-        transform: translateY(-100vh) translateX(20px) rotate(10deg);
-        opacity: 0;
-      }
-    }
-
-    @keyframes piscar {
-      0% { filter: brightness(1); }
-      100% { filter: brightness(1.5); }
-    }
-
-    .lanterna:nth-child(1) { left: 10%; animation-delay: 0s; }
-    .lanterna:nth-child(2) { left: 30%; animation-delay: 2s; }
-    .lanterna:nth-child(3) { left: 50%; animation-delay: 4s; }
-    .lanterna:nth-child(4) { left: 70%; animation-delay: 1s; }
-    .lanterna:nth-child(5) { left: 90%; animation-delay: 3s; }
   </style>
 </head>
 <body>
 
-  <div class="glow-background"></div>
-
-  <div class="lanternas">
-    <div class="lanterna"></div>
-    <div class="lanterna"></div>
-    <div class="lanterna"></div>
-    <div class="lanterna"></div>
-    <div class="lanterna"></div>
+  <div class="sparkle">
+    <span></span><span></span><span></span>
+    <span></span><span></span><span></span>
+    <span></span>
   </div>
 
   <header>
@@ -274,4 +238,4 @@
 </body>
 </html>
 
- 
+    
