--- a/index.html
+++ b/index.html
@@ -5,53 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Enrolados - O Filme</title>
   <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/5/5f/Tangled_logo.svg" />
-
   <style>
     body {
       margin: 0;
-      font-family: 'Arial', sans-serif;
+      font-family: Arial, sans-serif;
       background: linear-gradient(to right, #f8bbd0, #ce93d8);
       color: #4a148c;
       overflow-x: hidden;
     }
 
-    /* Efeito de brilho mágico com partículas */
     .sparkle {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      pointer-events: none;
-      z-index: 0;
+      position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+      overflow: hidden; pointer-events: none; z-index: 0;
     }
-
     .sparkle span {
-      position: absolute;
-      display: block;
-      width: 8px;
-      height: 8px;
-      background: rgba(255, 255, 255, 0.8);
-      border-radius: 50%;
-      animation: flutuarBrilho 10s linear infinite;
+      position: absolute; width: 8px; height: 8px;
+      background: rgba(255,255,255,0.8); border-radius: 50%;
+      animation: flutuar 10s linear infinite;
       box-shadow: 0 0 8px white;
     }
-
-    @keyframes flutuarBrilho {
-      0% {
-        transform: translateY(100vh) scale(0.5);
-        opacity: 0;
-      }
-      10% {
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(-10vh) scale(1.2);
-        opacity: 0;
-      }
+    @keyframes flutuar {
+      0% { transform: translateY(100vh) scale(0.5); opacity: 0; }
+      10% { opacity: 1; }
+      100% { transform: translateY(-10vh) scale(1.2); opacity: 0; }
     }
-
     .sparkle span:nth-child(1) { left: 10%; animation-delay: 0s; }
     .sparkle span:nth-child(2) { left: 20%; animation-delay: 2s; }
     .sparkle span:nth-child(3) { left: 35%; animation-delay: 4s; }
@@ -60,102 +37,70 @@
     .sparkle span:nth-child(6) { left: 80%; animation-delay: 5s; }
     .sparkle span:nth-child(7) { left: 90%; animation-delay: 6s; }
 
-    /* Restante do estilo continua igual... */
-
-    header {
+    header, footer {
       text-align: center;
       padding: 20px;
-      background-color: rgba(74, 20, 140, 0.8);
       color: white;
+      background-color: rgba(74,20,140,0.8);
       box-shadow: 0 0 10px #ba68c8;
     }
 
-    header img {
-      width: 150px;
-    }
-
+    header img { width: 150px; }
     nav a {
-      margin: 0 15px;
+      margin: 0 10px;
       color: white;
       text-decoration: none;
       font-weight: bold;
-      transition: color 0.3s, text-shadow 0.3s;
+      transition: 0.3s;
     }
-
-    nav a:hover {
-      text-shadow: 0 0 10px gold;
-    }
+    nav a:hover { text-shadow: 0 0 10px gold; }
 
     section {
       padding: 40px 20px;
       text-align: center;
     }
-
     h2 {
       font-size: 2em;
       margin-bottom: 10px;
-      transition: text-shadow 0.4s ease;
+      transition: text-shadow 0.4s;
     }
-
-    h2:hover {
-      text-shadow: 0 0 20px #ffffff;
-    }
+    h2:hover { text-shadow: 0 0 20px #fff; }
 
     .content img, .content video {
       max-width: 90%;
       border-radius: 10px;
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+      box-shadow: 0 0 15px rgba(255,255,255,0.5);
     }
 
     #personagens {
-      background-color: rgba(255, 255, 255, 0.3);
+      background: rgba(255,255,255,0.3);
       padding: 50px 20px;
     }
-
     .personagens-container {
       display: flex;
-      justify-content: center;
       flex-wrap: wrap;
+      justify-content: center;
       gap: 30px;
-      margin-top: 20px;
     }
-
     .card {
       background: white;
       border-radius: 15px;
       box-shadow: 0 0 15px rgba(0,0,0,0.1);
       padding: 10px;
       width: 150px;
-      transition: transform 0.3s, box-shadow 0.3s;
+      transition: 0.3s;
     }
-
     .card:hover {
       transform: scale(1.05);
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.6);
+      box-shadow: 0 0 20px rgba(255,255,255,0.6);
     }
+    .card img { width: 100%; border-radius: 10px; }
+    .card p { margin-top: 10px; font-weight: bold; color: #6a1b9a; }
 
-    .card img {
-      width: 100%;
-      border-radius: 10px;
-    }
-
-    .card p {
-      margin-top: 10px;
-      font-weight: bold;
-      color: #6a1b9a;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: rgba(74, 20, 140, 0.7);
-      color: white;
-      margin-top: 30px;
-    }
+    footer { margin-top: 30px; }
   </style>
 </head>
 <body>
-
   <div class="sparkle">
     <span></span><span></span><span></span>
     <span></span><span></span><span></span>
@@ -186,7 +131,7 @@
 
   <section id="curiosidades">
     <h2>Curiosidades</h2>
-    <ul style="list-style: none; padding: 0;">
+    <ul style="list-style:none;padding:0;">
       <li>✨ Rapunzel tem 21 metros de cabelo mágico!</li>
       <li>✨ É o 50º longa animado da Disney.</li>
       <li>✨ A música "I See The Light" foi indicada ao Oscar.</li>
@@ -234,8 +179,8 @@
   <footer>
     <p>Site feito com 💜 e magia pra você!</p>
   </footer>
-
 </body>
 </html>
+
 
     
