--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
   <section id="home">
     <h2>Bem-vindo ao mundo de Enrolados!</h2>
-    <p>Explore a aventura encantadora de Rapunzel e Flynn Rider.</p>
+    <p>Explore a aventura encantadora de Rapunzel e josé.</p>
   </section>
 
   <section id="informacoes">
@@ -133,7 +133,7 @@
     <h2>Curiosidades</h2>
     <ul style="list-style:none;padding:0;">
       <li>✨ Rapunzel tem 21 metros de cabelo mágico!</li>
-      <li>✨ É o 50º longa animado da Disney.</li>
+      <li>✨ a rapunzel tem o poder de curar e rejuvenescer as pessoas cantando.</li>
       <li>✨ A música "I See The Light" foi indicada ao Oscar.</li>
     </ul>
   </section>
@@ -150,11 +150,11 @@
         <p>Flynn Rider</p>
       </div>
       <div class="card">
-        <img src="https://static.wikia.nocookie.net/disney/images/f/f4/Pascal_Rapunzel.png" alt="Pascal" />
+        <img src="https://preview.redd.it/tukgmjkmb9e51.jpg?auto=webp&s=509a40b8c67d124fcac1a076594d7841fbd69aea" />
         <p>Pascal</p>
       </div>
       <div class="card">
-        <img src="https://static.wikia.nocookie.net/disney/images/0/06/Maximus_Enrolados.png" alt="Maximus" />
+        <img src="https://static.wikia.nocookie.net/disneyprincesas/images/a/a2/Maximus2.png/revision/latest?cb=20140104182854&path-prefix=pt-br" />
         <p>Maximus</p>
       </div>
     </div>
