--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <p>Pascal</p>
       </div>
       <div class="card">
-        <img src="https://static.wikia.nocookie.net/disneyprincesas/images/a/a2/Maximus2.png/revision/latest?cb=20140104182854&path-prefix=pt-br" />
+        <img src="https://i.pinimg.com/originals/39/88/59/398859d5da26380822e5616ab998e1f4.jpg" />
         <p>Maximus</p>
       </div>
     </div>
