--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <p>Flynn Rider</p>
       </div>
       <div class="card">
-        <img src="https://preview.redd.it/tukgmjkmb9e51.jpg?auto=webp&s=509a40b8c67d124fcac1a076594d7841fbd69aea" />
+        <img src="http://fc03.deviantart.net/fs71/f/2011/051/5/e/pascal_doll_by_redhotkaka-d3a0mts.png" />
         <p>Pascal</p>
       </div>
       <div class="card">
