--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <h2>Vídeo</h2>
     <div class="content">
       <video controls>
-        <source src="https://youtu.be/Nj-Y37_Av2E" type="video/mp4" />
+        <source src="https://youtu.be/Nj-Y37_Av2E?t=60" type="video/mp4" />
       </video>
     </div>
   </section>
