--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     }
     h2:hover { text-shadow: 0 0 20px #fff; }
 
-    .content img, .content video {
+    .content img, .content video, .content iframe {
       max-width: 90%;
       border-radius: 10px;
       box-shadow: 0 0 15px rgba(255,255,255,0.5);
@@ -170,9 +170,13 @@
   <section id="videos">
     <h2>Vídeo</h2>
     <div class="content">
-      <video controls>
-        <source src="https://youtu.be/Nj-Y37_Av2E?t=60" type="video/mp4" />
-      </video>
+      <iframe width="720" height="405"
+        src="https://www.youtube.com/embed/Nj-Y37_Av2E"
+        title="Vídeo do YouTube - Enrolados"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
     </div>
   </section>
 
@@ -181,6 +185,8 @@
   </footer>
 </body>
 </html>
+
+ 
 
 
     
