--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     .sparkle span:nth-child(6) { left: 80%; animation-delay: 5s; }
     .sparkle span:nth-child(7) { left: 90%; animation-delay: 6s; }
 
-    /* Alinhamento do cabeçalho */
+    /* Alteração para centralizar o cabeçalho */
     header {
       display: flex;
-      flex-direction: column; /* Logo acima do menu */
-      justify-content: center;
-      align-items: center;
+      flex-direction: column;  /* Organiza o conteúdo de cima para baixo */
+      justify-content: center;  /* Centraliza verticalmente */
+      align-items: center;      /* Centraliza horizontalmente */
       padding: 20px;
       color: white;
       background-color: rgba(74, 20, 140, 0.8);
