--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
       margin-bottom: 10px; /* Espaço entre o logo e o menu */
     }
 
+    /* Nova imagem ao lado do logo */
+    header .extra-img {
+      width: 100px;
+      border-radius: 10px;
+    }
+
     nav {
       display: flex;
       justify-content: center;
@@ -75,11 +81,13 @@
       padding: 40px 20px;
       text-align: center;
     }
+
     h2 {
       font-size: 2em;
       margin-bottom: 10px;
       transition: text-shadow 0.4s;
     }
+
     h2:hover { text-shadow: 0 0 20px #fff; }
 
     .content img, .content video, .content iframe {
@@ -92,12 +100,14 @@
       background: rgba(255,255,255,0.3);
       padding: 50px 20px;
     }
+
     .personagens-container {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 30px;
     }
+
     .card {
       background: white;
       border-radius: 15px;
@@ -106,14 +116,25 @@
       width: 150px;
       transition: 0.3s;
     }
+
     .card:hover {
       transform: scale(1.05);
       box-shadow: 0 0 20px rgba(255,255,255,0.6);
     }
+
     .card img { width: 100%; border-radius: 10px; }
     .card p { margin-top: 10px; font-weight: bold; color: #6a1b9a; }
 
     footer { margin-top: 30px; }
+
+    /* Imagem de fundo na seção de informações */
+    #informacoes {
+      background-image: url('https://path_to_background_image.jpg');
+      background-size: cover;
+      padding: 50px 20px;
+      color: white;
+      text-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    }
   </style>
 </head>
 <body>
@@ -125,6 +146,8 @@
 
   <header>
     <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Tangled_logo.svg" alt="Logo Enrolados" />
+    <!-- Nova imagem adicionada ao lado do logo -->
+    <img class="extra-img" src="https://path_to_your_image.jpg" alt="Rapunzel" />
     <nav>
       <a href="#home">Home</a>
       <a href="#informacoes">Informações</a>
@@ -137,7 +160,7 @@
 
   <section id="home">
     <h2>Bem-vindo ao mundo de Enrolados!</h2>
-    <p>Explore a aventura encantadora de Rapunzel e josé.</p>
+    <p>Explore a aventura encantadora de Rapunzel e José.</p>
   </section>
 
   <section id="informacoes">
@@ -179,25 +202,4 @@
   <section id="imagens">
     <h2>Imagens</h2>
     <div class="content">
-      <img src="https://tse3.mm.bing.net/th?id=OIP.etD759G61dTPC439LjzuzwHaEK&pid=Api&P=0&h=180" alt="Imagem de Rapunzel" />
-    </div>
-  </section>
-
-  <section id="videos">
-    <h2>Vídeo</h2>
-    <div class="content">
-      <iframe width="720" height="405"
-        src="https://www.youtube.com/embed/Nj-Y37_Av2E"
-        title="Vídeo do YouTube - Enrolados"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-      </iframe>
-    </div>
-  </section>
-
-  <footer>
-    <p>Site feito com 💜 e magia pra você!</p>
-  </footer>
-</body>
-</html>
+      <img src="https://tse3.mm.bing.net
