--- a/index.html
+++ b/index.html
@@ -37,12 +37,11 @@
     .sparkle span:nth-child(6) { left: 80%; animation-delay: 5s; }
     .sparkle span:nth-child(7) { left: 90%; animation-delay: 6s; }
 
-    /* Alteração para centralizar o cabeçalho */
     header {
       display: flex;
-      flex-direction: column;  /* Organiza o conteúdo de cima para baixo */
-      justify-content: center;  /* Centraliza verticalmente */
-      align-items: center;      /* Centraliza horizontalmente */
+      flex-direction: column;  
+      justify-content: center;  
+      align-items: center;      
       padding: 20px;
       color: white;
       background-color: rgba(74, 20, 140, 0.8);
@@ -51,7 +50,7 @@
 
     header img {
       width: 150px;
-      margin-bottom: 10px; /* Espaço entre o logo e o menu */
+      margin-bottom: 10px;
     }
 
     nav {
@@ -75,11 +74,13 @@
       padding: 40px 20px;
       text-align: center;
     }
+
     h2 {
       font-size: 2em;
       margin-bottom: 10px;
       transition: text-shadow 0.4s;
     }
+
     h2:hover { text-shadow: 0 0 20px #fff; }
 
     .content img, .content video, .content iframe {
@@ -92,12 +93,14 @@
       background: rgba(255,255,255,0.3);
       padding: 50px 20px;
     }
+
     .personagens-container {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 30px;
     }
+
     .card {
       background: white;
       border-radius: 15px;
@@ -106,14 +109,35 @@
       width: 150px;
       transition: 0.3s;
     }
+
     .card:hover {
       transform: scale(1.05);
       box-shadow: 0 0 20px rgba(255,255,255,0.6);
     }
+
     .card img { width: 100%; border-radius: 10px; }
+
     .card p { margin-top: 10px; font-weight: bold; color: #6a1b9a; }
 
     footer { margin-top: 30px; }
+
+    /* Responsividade */
+    @media screen and (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: center;
+      }
+      nav {
+        flex-direction: column;
+        gap: 10px;
+      }
+      .personagens-container {
+        flex-direction: column;
+      }
+      .content img {
+        max-width: 100%;
+      }
+    }
   </style>
 </head>
 <body>
@@ -137,7 +161,7 @@
 
   <section id="home">
     <h2>Bem-vindo ao mundo de Enrolados!</h2>
-    <p>Explore a aventura encantadora de Rapunzel e josé.</p>
+    <p>Explore a aventura encantadora de Rapunzel e José.</p>
   </section>
 
   <section id="informacoes">
@@ -149,7 +173,7 @@
     <h2>Curiosidades</h2>
     <ul style="list-style:none;padding:0;">
       <li>✨ Rapunzel tem 21 metros de cabelo mágico!</li>
-      <li>✨ A Rapunzel tem o poder de curar e rejuvenescer as pessoas cantando.</li>
+      <li>✨ Rapunzel tem o poder de curar e rejuvenescer as pessoas cantando.</li>
       <li>✨ A música "I See The Light" foi indicada ao Oscar.</li>
     </ul>
   </section>
@@ -187,17 +211,4 @@
     <h2>Vídeo</h2>
     <div class="content">
       <iframe width="720" height="405"
-        src="https://www.youtube.com/embed/Nj-Y37_Av2E"
-        title="Vídeo do YouTube - Enrolados"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-      </iframe>
-    </div>
-  </section>
-
-  <footer>
-    <p>Site feito com 💜 e magia pra você!</p>
-  </footer>
-</body>
-</html>
+        src="https://www.youtube.com/embed/Nj-Y37_Av
