--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
@@ -39,9 +39,9 @@
 
     header {
       display: flex;
-      flex-direction: column;  
-      justify-content: center;  
-      align-items: center;      
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       padding: 20px;
       color: white;
       background-color: rgba(74, 20, 140, 0.8);
@@ -211,4 +211,18 @@
     <h2>Vídeo</h2>
     <div class="content">
       <iframe width="720" height="405"
-        src="https://www.youtube.com/embed/Nj-Y37_Av
+        src="https://www.youtube.com/embed/Nj-Y37_Av2E"
+        title="Vídeo do YouTube - Enrolados"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
+    </div>
+  </section>
+
+  <footer>
+    <p>Site feito com 💜 e magia pra você!</p>
+  </footer>
+</body>
+</html>
+
