--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <h2>Vídeo</h2>
     <div class="content">
       <iframe width="720" height="405"
-        src="https://www.youtube.com/embed/Nj-Y37_Av2E"
+        src="https://youtu.be/Nj-Y37_Av2E?t=2"
         title="Vídeo do YouTube - Enrolados"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
