--- a/index.html
+++ b/index.html
@@ -119,7 +119,13 @@
 
     .card p { margin-top: 10px; font-weight: bold; color: #6a1b9a; }
 
-    footer { margin-top: 30px; }
+    footer {
+      margin-top: 30px;
+      text-align: center;
+      padding: 20px;
+      background-color: rgba(74, 20, 140, 0.2);
+      font-weight: bold;
+    }
 
     /* Responsividade */
     @media screen and (max-width: 768px) {
@@ -134,7 +140,7 @@
       .personagens-container {
         flex-direction: column;
       }
-      .content img {
+      .content img, .content iframe {
         max-width: 100%;
       }
     }
@@ -161,7 +167,7 @@
 
   <section id="home">
     <h2>Bem-vindo ao mundo de Enrolados!</h2>
-    <p>Explore a aventura encantadora de Rapunzel e José.</p>
+    <p>Explore a aventura encantadora de Rapunzel e Flynn Rider.</p>
   </section>
 
   <section id="informacoes">
@@ -182,19 +188,19 @@
     <h2>Personagens</h2>
     <div class="personagens-container">
       <div class="card">
-        <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQ9tTw2xsSgFA_kpTym1p4WU7raHlHBWwWn1gjh40b6SssZXqKLUPVWJRucyTP9-3Cjh9aUCB4_GX-sTCiNA828SPog9taHKlTLuefZapk" />
+        <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQ9tTw2xsSgFA_kpTym1p4WU7raHlHBWwWn1gjh40b6SssZXqKLUPVWJRucyTP9-3Cjh9aUCB4_GX-sTCiNA828SPog9taHKlTLuefZapk" alt="Rapunzel" />
         <p>Rapunzel</p>
       </div>
       <div class="card">
-        <img src="https://tse2.mm.bing.net/th?id=OIP.sqJLsoOnS2ttIqP5OqwDdAHaHa&pid=Api&P=0&h=180" />
+        <img src="https://tse2.mm.bing.net/th?id=OIP.sqJLsoOnS2ttIqP5OqwDdAHaHa&pid=Api&P=0&h=180" alt="Flynn Rider" />
         <p>Flynn Rider</p>
       </div>
       <div class="card">
-        <img src="http://fc03.deviantart.net/fs71/f/2011/051/5/e/pascal_doll_by_redhotkaka-d3a0mts.png" />
+        <img src="http://fc03.deviantart.net/fs71/f/2011/051/5/e/pascal_doll_by_redhotkaka-d3a0mts.png" alt="Pascal" />
         <p>Pascal</p>
       </div>
       <div class="card">
-        <img src="https://i.pinimg.com/originals/39/88/59/398859d5da26380822e5616ab998e1f4.jpg" />
+        <img src="https://i.pinimg.com/originals/39/88/59/398859d5da26380822e5616ab998e1f4.jpg" alt="Maximus" />
         <p>Maximus</p>
       </div>
     </div>
@@ -211,8 +217,8 @@
     <h2>Vídeo</h2>
     <div class="content">
       <iframe width="720" height="405"
-        src=" https://youtu.be/Nj-Y37_Av2E?t=5"
-        title="Vídeo do YouTube - Enrolados"
+        src="https://www.youtube.com/embed/Nj-Y37_Av2E"
+        title="Enrolados - Vídeo"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
@@ -225,4 +231,5 @@
   </footer>
 </body>
 </html>
+
 
