--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <h2>Vídeo</h2>
     <div class="content">
       <iframe width="720" height="405"
-        src="https://youtu.be/Nj-Y37_Av2E?t=5"
+        src=" https://youtu.be/MXCqOhoO8mI?t=16"
         title="Vídeo do YouTube - Enrolados"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -254,7 +254,7 @@
 
   <!-- Botão Voltar ao Topo -->
   <button id="topoBtn" onclick="voltarAoTopo()" title="Voltar ao topo">
-    <img src="https://i.pinimg.com/originals/91/20/1e/91201ee1a79e0cf9eab2d1d81c3ea0f6.png" alt="Rapunzel" />
+    <img src=" https://tse3.mm.bing.net/th?id=OIP.XVugQCGrhsPX1wqX8W3q6wHaFj&pid=Api&P=0&h=180" alt="Rapunzel" />
   </button>
 
   <script>
