--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <h2>Vídeo</h2>
     <div class="content">
       <iframe width="720" height="405"
-        src=" https://youtu.be/MXCqOhoO8mI?t=16"
+        src="https://youtu.be/f5ONNXhXri0 "
         title="Vídeo do YouTube - Enrolados"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -254,7 +254,7 @@
 
   <!-- Botão Voltar ao Topo -->
   <button id="topoBtn" onclick="voltarAoTopo()" title="Voltar ao topo">
-    <img src=" https://tse3.mm.bing.net/th?id=OIP.XVugQCGrhsPX1wqX8W3q6wHaFj&pid=Api&P=0&h=180" alt="Rapunzel" />
+    <img src="http://10wallpaper.com/wallpaper/1280x960/1110/baby_rapunzel-Tangled_2010_animated_wallpaper_1280x960.jpg " alt="Rapunzel" />
   </button>
 
   <script>
