--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <h2>Vídeo</h2>
     <div class="content">
       <iframe width="720" height="405"
-        src="https://youtu.be/BUsut3Yt5hY"
+        src="https://www.youtube.com/embed/BUsut3Yt5hY"
         title="Vídeo do YouTube - Enrolados"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
