--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       padding: 40px 20px;
       text-align: center;
     }
-1
+
     h2 {
       font-size: 2em;
       margin-bottom: 10px;
@@ -239,7 +239,7 @@
     <h2>Vídeo</h2>
     <div class="content">
       <iframe width="720" height="405"
-        src=https://youtu.be/CW3vBLN9Ta0?t=21"
+        src="https://www.youtube.com/embed/BUsut3Yt5hY?autoplay=1&rel=0&modestbranding=1"
         title="Vídeo do YouTube - Enrolados"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
